test/TestPhases/typechecker/invalid/ReturnMissing2.blc
module

function calc() returns int64
    
end

activity main ()()
    let x = calc()
    await false
end
